--- a/templates/nodes.html
+++ b/templates/nodes.html
@@ -6,8 +6,14 @@
 </head>
 <body>
 
-<table border="1">
+<!--<form action="/nodes/" method="post">-->
+<!--    {% csrf_token %}-->
+<!--    cab: <input type="text" name="cab"> <br>-->
+<!--    <input type="submit" value="Submit">-->
+<!--</form>-->
 
+
+<table border="1">
     <tr>
         <th>name</th>
         <th>memtest</th>
